--- a/pattern/detect-browser/detect-browser.css
+++ b/pattern/detect-browser/detect-browser.css
@@ -1,36 +1,72 @@
-/* == https://www.browserstack.com/guide/create-browser-specific-css == */
-/** Internet Explorer */
-.result { display: none; }
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-.result.ie {
-display: block;
+/* -- references --
+  https://dev.to/krantikr/browser-specific-css-for-internet-explorer-firefox-chrome-safari-and-edge-394p
+  https://www.browserstack.com/guide/create-browser-specific-css
+  https://www.paulirish.com/2009/browser-specific-css-hacks/
+  https://jeffclayton.wordpress.com/
+  http://browserhacks.com/  
+  https://www.lambdatest.com/blog/browser-specific-css/
+  https://browserstrangeness.github.io/css_hacks.html
+*/
+
+/* stylish */
+body {
+  margin: 10%;
+  font: 48px/2.0 monospace;
 }
+body > div {
+  border: 4px solid silver;
+  padding: 20px;
 }
 
-/** Microsoft Edge */
-@supports (-ms-ime-align: auto) {
-.result.edge {
-display: block;
-}
-}
+/** Require */
+.result,
+.display { display: none; }
 
-/** Mozilla Firefox */
-@-moz-document url-prefix() {{
-.result.firefox
-display: block;
+/** ============= Chrominum ================ */
+.result.chrome:after {
+    content: 'Version: ?';
+    font-size: 18px;
+    background-color: black;
+    padding: 5px;
+    color: white;
 }
-}
-
-/** Safari */
-@media not all and (min-resolution: 0.001dpcm) {{
-.result.safari
-display: block;
-}
-}
-
-/** Chrominum */
+/* --- Old ---*/
 @media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
-.result.chrome:not(*:root) {
-display: block;
+  .result.chrome:not(*:root) { display: block; }
+  .result.chrome:after {
+    content: 'Version: Old';
+    background-color: red;
+  } 
 }
+/* --- Current --- */
+@supports ( grid-template-columns: none ) {
+  @media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
+    .result.chrome:not(*:root) { display: block; }
+    .result.chrome:after {
+      content: 'Version: Current';
+      background-color: green;
+    } 
+  }
+}
+
+/**  ============= Internet Explorer ================ */
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .result.ie { display: block; }
+}
+
+/**  ============= Microsoft Edge ================ */
+@supports (-ms-ime-align: auto) {
+  .result.edge { display: block; }
+}
+
+/**  ============= Mozilla Firefox ================ */
+@-moz-document url-prefix() {
+  .result.firefox {
+    display: block;
+  }
+}
+
+/**  ============= Safari ================ */
+@media not all and (min-resolution: 0.001dpcm) {
+  .result.safari { display: block; }
 }
