--- a/src/base/variable.css
+++ b/src/base/variable.css
@@ -1,3 +1,4 @@
+/* font-family */
 :root {
   /* default */
   --font-family_monospace: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', 'Roboto Mono', 'Ubuntu Monospace', 'Oxygen Mono', 'Liberation Mono', monospace;
