--- a/src/base/global.css
+++ b/src/base/global.css
@@ -6,6 +6,8 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	vertical-align: inherit;
+  background-repeat: no-repeat;
 }
 html {
   font-size: 16px;
