--- a/src/tool/simulator/device.css
+++ b/src/tool/simulator/device.css
@@ -1,4 +1,4 @@
-@import "../../base/import.css";
+@import "../../base/_export.css";
 @import "../../component/media/iframe/iframe.css";
 @import "../../layout/absolute/absolute.css";
 
