--- a/src/component/media/iframe/iframe-external-source.html
+++ b/src/component/media/iframe/iframe-external-source.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="../../../base/global.css" rel="stylesheet">
+  <link href="../../../base/_export.css" rel="stylesheet">
   <link href="iframe.css" rel="stylesheet">
 </head>
 <body>
