--- a/src/component/typography/text-inline.css
+++ b/src/component/typography/text-inline.css
@@ -6,3 +6,14 @@ label {
   display: inline-flex;
   align-items: center;
 }
+
+abbr[title] {
+  text-decoration: none;
+  border-bottom: 1px dotted gray;
+  cursor: help;
+}
+code {
+  font: 1.25em/1.5em monospace;
+  background: silver;
+  padding: 0 .25em;
+}
