--- a/src/component/typography/inline/a-cite/demo.html
+++ b/src/component/typography/inline/a-cite/demo.html
@@ -6,7 +6,7 @@
   <link href="../../../../base/_export.css" rel="stylesheet">
   <link href="../../../../layout/_export.css" rel="stylesheet">
   <link href="../../../../utility/_export.css" rel="stylesheet">
-  <link href="a.css" rel="stylesheet">
+  <link href="a-cite.css" rel="stylesheet">
   <script src="../../../../tool/js/random.min.js" defer></script>
   <script src="../../../../utility/helper/dev.js" defer></script>
 </head>
@@ -57,6 +57,18 @@
     <div class="code" data-name="a[href^='tel']"></div>
     <div class="empty"></div>
     Direct Call at <a href="tel:+49.157.0156" onclick="return false">+49 157 0156</a>
+    <div class="empty"></div>
+  </div>
+  <div>
+    <div class="code" data-name="cite"></div>
+    <div class="empty"></div>
+    More information can be found in <cite>[ISO-0000]</cite>.
+    <div class="empty"></div>
+  </div>
+  <div>
+    <div class="code" data-name="cite a"></div>
+    <div class="empty"></div>
+    First sentence in <cite><a href="https://example.com" onclick="return false">Example Book</a></cite> by Foo Bar (Part 1, Chapter 1).
     <div class="empty"></div>
   </div>
 </body>
