--- a/src/component/typography/inline/b-i-u-s/demo.html
+++ b/src/component/typography/inline/b-i-u-s/demo.html
@@ -6,35 +6,31 @@
   <link href="../../../../base/_export.css" rel="stylesheet">
   <link href="../../../../layout/_export.css" rel="stylesheet">
   <link href="../../../../utility/_export.css" rel="stylesheet">
-  <link href="../../block/_export.css" rel="stylesheet">
-  <link href="sub-sup.css" rel="stylesheet">
-  <script src="../../../../tool/js/random.min.js" defer></script>
+  <link href="b-i-u-s.css" rel="stylesheet">
   <script src="../../../../utility/helper/dev.js" defer></script>
 </head>
 <body class="page">
   <div>
-    <div class="code" data-name="sub"></div>
+    <div class="code" data-name="b"></div>
     <div class="empty"></div>
-    H<sub>2</sub>O
-    <div class="empty"></div>
-  </div>
-  <div>
-    <div class="code" data-name="sub"></div>
-    <div class="empty"></div>
-    Copyright<sup>&copy;</sup>
+    Is a <b>Bold</b> text
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="h1 > sub"></div>
+    <div class="code" data-name="i"></div>
     <div class="empty"></div>
-    <h1>H<sub>2</sub>O</h1>
-    <p data-random-paragraph=2></p>
+    Text <i>Italic</i>
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="h3 > sup"></div>
-    <p data-random-sentence=9></p>
-    <h3>Copyright<sup>&copy;</sup></h3>
+    <div class="code" data-name="u"></div>
+    <div class="empty"></div>
+    Text <u>Underline</u>
+    <div class="empty"></div>
+  </div>
+  <div>
+    <div class="code" data-name="s"></div>
+    Strike <s>Text</s>
     <div class="empty"></div>
   </div>
 </body>
