--- a/src/component/typography/inline/q-mark-kbd/demo.html
+++ b/src/component/typography/inline/q-mark-kbd/demo.html
@@ -7,35 +7,27 @@
   <link href="../../../../layout/_export.css" rel="stylesheet">
   <link href="../../../../utility/_export.css" rel="stylesheet">
   <link href="../../block/_export.css" rel="stylesheet">
-  <link href="../code-samp-output/code-samp-output.css" rel="stylesheet">
-  <link href="./abbr-dfn.css" rel="stylesheet">
+  <link href="q-mark-kbd.css" rel="stylesheet">
   <script src="../../../../tool/js/random.min.js" defer></script>
   <script src="../../../../utility/helper/dev.js" defer></script>
 </head>
 <body class="page">
   <div>
-    <div class="code" data-name="abbr"></div>
+    <div class="code" data-name="q"></div>
     <div class="empty"></div>
-    Without <code>abbr</code>: css,<br>
-    with <code>abbr</code>: <abbr>css</abbr>   
-    <div class="empty"></div>
-  </div>
-  <div>
-    <div class="code" data-name="abbr[title]"></div>
-    <div class="empty"></div>
-    Multiline title inside <abbr title="Hyper&#10;Text&#10;Markup&#10;Language">html</abbr>   
+    This is <q>Sentence inside inline quote</q>.
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="dfn"></div>
+    <div class="code" data-name="mark"></div>
     <div class="empty"></div>
-    <dfn>dev</dfn>
+    Example <mark>Marked</mark> text.
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="dfn[title]"></div>
+    <div class="code" data-name="kbd"></div>
     <div class="empty"></div>
-    <dfn title="Developer">dev</dfn> 
+    Press <kbd>Ctrl</kbd>+<kbd>s</kbd> to Save.
     <div class="empty"></div>
   </div>
 </body>
