--- a/src/component/typography/inline/var-time-data/demo.html
+++ b/src/component/typography/inline/var-time-data/demo.html
@@ -7,35 +7,30 @@
   <link href="../../../../layout/_export.css" rel="stylesheet">
   <link href="../../../../utility/_export.css" rel="stylesheet">
   <link href="../../block/_export.css" rel="stylesheet">
-  <link href="../code-samp-output/code-samp-output.css" rel="stylesheet">
-  <link href="./abbr-dfn.css" rel="stylesheet">
+  <link href="var-time-data.css" rel="stylesheet">
   <script src="../../../../tool/js/random.min.js" defer></script>
   <script src="../../../../utility/helper/dev.js" defer></script>
 </head>
 <body class="page">
   <div>
-    <div class="code" data-name="abbr"></div>
+    <div class="code" data-name="code var"></div>
     <div class="empty"></div>
-    Without <code>abbr</code>: css,<br>
-    with <code>abbr</code>: <abbr>css</abbr>   
-    <div class="empty"></div>
-  </div>
-  <div>
-    <div class="code" data-name="abbr[title]"></div>
-    <div class="empty"></div>
-    Multiline title inside <abbr title="Hyper&#10;Text&#10;Markup&#10;Language">html</abbr>   
+    <code>let <var>foo</var> = 'bar'</code>
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="dfn"></div>
+    <div class="code" data-name="time"></div>
     <div class="empty"></div>
-    <dfn>dev</dfn>
+    The concert starts at <time datetime="20:00">20:00</time>
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="dfn[title]"></div>
+    <div class="code" data-name="data"></div>
     <div class="empty"></div>
-    <dfn title="Developer">dev</dfn> 
+    Hover onto data:<br>
+    - <data value="398">Mini Ketchup</data><br>
+    - <data value="399">Jumbo Ketchup</data><br>
+    - <data value="400">Mega Jumbo Ketchup</data>
     <div class="empty"></div>
   </div>
 </body>
