--- a/src/component/typography/inline/_export.css
+++ b/src/component/typography/inline/_export.css
@@ -1,6 +1,10 @@
-@import 'a/a.css';
-@import 'sub-sup/sub-sup.css';
+@import 'a-cite/a-cite.css';
+@import 'sub-sup-small/sub-supsmall.css';
 @import 'code-samp-output/code-samp-output.css';
 @import 'abbr-dfn/abbr-dfn.css';
-@import '';
-@import '';
+@import 'b-i-u-s/b-i-u-s.css';
+@import 'del-ins/del-ins.css';
+@import 'strong-em/strong-em.css';
+@import 'var-time-data/var-time-data.css';
+@import 'q-mark-kbd/q-mark-kbd.css';
+@import 'ruby-rp-rt/ruby-rp-rt.css';
