--- a/src/component/typography/inline/ruby-rp-rt/demo.html
+++ b/src/component/typography/inline/ruby-rp-rt/demo.html
@@ -8,34 +8,23 @@
   <link href="../../../../utility/_export.css" rel="stylesheet">
   <link href="../../block/_export.css" rel="stylesheet">
   <link href="../code-samp-output/code-samp-output.css" rel="stylesheet">
-  <link href="./abbr-dfn.css" rel="stylesheet">
+  <link href="ruby-rp-rt.css" rel="stylesheet">
   <script src="../../../../tool/js/random.min.js" defer></script>
   <script src="../../../../utility/helper/dev.js" defer></script>
 </head>
 <body class="page">
   <div>
-    <div class="code" data-name="abbr"></div>
+    <div class="code" data-name="ruby rp rt (1 char)"></div>
     <div class="empty"></div>
-    Without <code>abbr</code>: css,<br>
-    with <code>abbr</code>: <abbr>css</abbr>   
-    <div class="empty"></div>
-  </div>
-  <div>
-    <div class="code" data-name="abbr[title]"></div>
-    <div class="empty"></div>
-    Multiline title inside <abbr title="Hyper&#10;Text&#10;Markup&#10;Language">html</abbr>   
+    Left - <ruby>CENTER<rp>(</rp><rt>TOP</rt><rp>)</rp></ruby> - Right
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="dfn"></div>
+    <div class="code" data-name="ruby rp rt (2 char)"></div>
     <div class="empty"></div>
-    <dfn>dev</dfn>
-    <div class="empty"></div>
-  </div>
-  <div>
-    <div class="code" data-name="dfn[title]"></div>
-    <div class="empty"></div>
-    <dfn title="Developer">dev</dfn> 
+    Before - 
+    <ruby>L<rp>(</rp><rt>1</rt><rp>)</rp>R<rp>(</rp><rt>2</rt><rp>)</rp></ruby>
+    - After
     <div class="empty"></div>
   </div>
 </body>
