--- a/src/component/typography/inline/strong-em/demo.html
+++ b/src/component/typography/inline/strong-em/demo.html
@@ -8,34 +8,21 @@
   <link href="../../../../utility/_export.css" rel="stylesheet">
   <link href="../../block/_export.css" rel="stylesheet">
   <link href="../code-samp-output/code-samp-output.css" rel="stylesheet">
-  <link href="./abbr-dfn.css" rel="stylesheet">
+  <link href="./strong-em.css" rel="stylesheet">
   <script src="../../../../tool/js/random.min.js" defer></script>
   <script src="../../../../utility/helper/dev.js" defer></script>
 </head>
 <body class="page">
   <div>
-    <div class="code" data-name="abbr"></div>
+    <div class="code" data-name="strong"></div>
     <div class="empty"></div>
-    Without <code>abbr</code>: css,<br>
-    with <code>abbr</code>: <abbr>css</abbr>   
-    <div class="empty"></div>
-  </div>
-  <div>
-    <div class="code" data-name="abbr[title]"></div>
-    <div class="empty"></div>
-    Multiline title inside <abbr title="Hyper&#10;Text&#10;Markup&#10;Language">html</abbr>   
+    This is <strong>strong</strong> text.
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="dfn"></div>
+    <div class="code" data-name="em"></div>
     <div class="empty"></div>
-    <dfn>dev</dfn>
-    <div class="empty"></div>
-  </div>
-  <div>
-    <div class="code" data-name="dfn[title]"></div>
-    <div class="empty"></div>
-    <dfn title="Developer">dev</dfn> 
+    We <em>had</em> to do something about it.
     <div class="empty"></div>
   </div>
 </body>
