--- a/src/base/variable/color.css
+++ b/src/base/variable/color.css
@@ -1,8 +1,28 @@
 :root {
+    /* -- base -- */
+    --color_black: #111111;
+    --color_gray: #AAAAAA;
+    --color_silver: #DDDDDD;
+    --color_white: #FFFFFF;
+    --color_red: #FF4136;
+    --color_green: #2ECC40;
+    --color_blue: #0074D9;
+    --color_navy: #001F3F;
+    --color_aqua: #7FDBFF;
+    --color_teal: #39CCCC;
+    --color_olive: #3D9970;
+    --color_lime: #01FF70;
+    --color_yellow: #FFDC00;
+    --color_orange: #FF851B;
+    --color_fuchsia: #F012BE;
+    --color_purple: #B10DC9;
+    --color_maroon: #85144B;
+  /* -- theme -- */
   --color-link: #2196f3;
   --color-link_visited: #9c27b0;
   --color-link_active: #ff5722;
   --color-link_fragment: #9e9e9e;
   --color-link_target: #ff5722;
   --color-border: silver;
+  --base_color-border: var(--color_silver);
 }
