--- a/src/layout/box/paper.css
+++ b/src/layout/box/paper.css
@@ -1,9 +1,9 @@
-.page {
-  --page_padding: 2.5%;
-  --page_margin: 0;
-  width: 100%;
-  height: 100%;
-  padding: var(--page_padding);
-  margin: var(--page_margin);
-  overflow: auto;
+/* <body class="paper"> */
+.paper {
+  --paper_shadow: 0 1px 2px black;
+  margin: 1.5%;
+  padding: 2.5%;
+  background-color: white;
+  box-shadow: var(--paper_shadow);
+  height: -webkit-fill-available;
 }
