--- a/src/component/list/li-ol-ul-menu/demo.html
+++ b/src/component/list/li-ol-ul-menu/demo.html
@@ -6,10 +6,7 @@
   <link href="../../../base/_export.css" rel="stylesheet">
   <link href="../../../layout/_export.css" rel="stylesheet">
   <link href="../../../utility/_export.css" rel="stylesheet">
-  <link href="../../typography/_export.css" rel="stylesheet">
-  <link href="../../section/_export.css" rel="stylesheet">
-  <link href="../_export.css" rel="stylesheet">
-  <link href="li-ol-ul-menu.css" rel="stylesheet">
+  <link href="../../_export.css" rel="stylesheet">
   <script src="../../../tool/js/random.min.js" defer></script>
   <script src="../../../utility/helper/dev.js" defer></script>
 </head>
@@ -162,41 +159,35 @@
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="li MIX"></div>
+    <div class="code" data-name="ul ol li"></div>
     <div class="empty"></div>
     <ul>
       <li>List item 1</li>
-      <li>
-        List item 2
-        <menu>
+      <li>List item 2
+        <ol>
           <li>List item 2.1</li>
-          <li>
-            List item 2.2
-            <ul>
-              <li>List item 2.2.1</li>
-              <li>
-                List item 2.2.2
-                <ol>
-                  <li>List item 2.2.2.1</li>
-                  <li>
-                    List item 2.2.2.2
-                    <ul>
-                      <li>List item 2.2.2.2.1</li>
-                      <li>List item 2.2.2.2.2</li>
-                      <li>List item 2.2.2.2.3</li>
-                    </ul>
-                  </li>
-                  <li>List item 2.2.2.3</li>
-                </ol>
-              </li>
-              <li>List item 2.2.3</li>
-            </ul>
-          </li>
+          <li>List item 2.2</li>
           <li>List item 2.3</li>
-        </menu>
+        </ol>
       </li>
       <li>List item 3</li>
     </ul>
+    <div class="empty"></div>
+  </div>
+  <div>
+    <div class="code" data-name="ol ul li"></div>
+    <div class="empty"></div>
+    <ol>
+      <li>List item 1</li>
+      <li>List item 2
+        <ul>
+          <li>List item 2.1</li>
+          <li>List item 2.2</li>
+          <li>List item 2.3</li>
+        </ul>
+      </li>
+      <li>List item 3</li>
+    </ol>
     <div class="empty"></div>
   </div>
 </body>
