--- a/src/component/_export.css
+++ b/src/component/_export.css
@@ -3,3 +3,4 @@
 @import url('list/_export.css');
 @import url('trigger/_export.css');
 @import url('table/_export.css');
+@import url('form/_export.css');
