--- a/src/component/trigger/details-summary/details-summary.css
+++ b/src/component/trigger/details-summary/details-summary.css
@@ -9,6 +9,7 @@ summary {
   display: block;
   position: relative;
 	padding-left: 1em;
+	cursor:pointer;
   }
   summary:before {
   position: absolute;
