--- a/src/component/form/text-color-number/demo.html
+++ b/src/component/form/text-color-number/demo.html
@@ -12,7 +12,7 @@
 </head>
 <body class="page">
   <div>
-    <div class="code" data-name="input|input[text]"></div>
+    <div class="code" data-name="input|input[type=text]"></div>
     <div class="empty"></div>
     <input value="no-type"><br>
 		<input type="text">
@@ -22,14 +22,20 @@
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="input[color]"></div>
+    <div class="code" data-name="input[type=hidden]"></div>
+    <div class="empty"></div>
+    <input type="hidden" value="34657">
+    <div class="empty"></div>
+  </div>
+  <div>
+    <div class="code" data-name="input[type=color]"></div>
     <div class="empty"></div>
 		<input type="color" value="#FFDC00">
 		<input type="color" disabled>
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="input[password]"></div>
+    <div class="code" data-name="input[type=password]"></div>
     <div class="empty"></div>
     <input type="password">
 		<input type="password" placeholder="Password"><br>
@@ -38,7 +44,7 @@
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="input[tell]"></div>
+    <div class="code" data-name="input[type=tell]"></div>
     <div class="empty"></div>
     <input type="tell">
 		<input type="tell" placeholder="+64"><br>
@@ -47,7 +53,7 @@
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="input[url]"></div>
+    <div class="code" data-name="input[type=url]"></div>
     <div class="empty"></div>
     <input type="url">
 		<input type="url" placeholder="https://"><br>
@@ -56,7 +62,7 @@
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="input[search]"></div>
+    <div class="code" data-name="input[type=search]"></div>
     <div class="empty"></div>
     <input type="search">
 		<input type="search" placeholder="Search"><br>
@@ -65,7 +71,7 @@
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="input[email]"></div>
+    <div class="code" data-name="input[type=email]"></div>
     <div class="empty"></div>
     <input type="email">
 		<input type="email" placeholder="mail@your.site"><br>
