--- a/src/component/form/range/range.css
+++ b/src/component/form/range/range.css
@@ -9,7 +9,8 @@ input[type=range] {
   background-color: transparent;
   -webkit-appearance: none;
   appearance: none;
-  height: var(--input_range_height); 
+  height: var(--input_range_height);
+  vertical-align: middle;
 }
 /* track */
 input[type=range]::-webkit-slider-runnable-track {
