--- a/src/component/media/iframe/iframe.css
+++ b/src/component/media/iframe/iframe.css
@@ -2,6 +2,8 @@ iframe {
   display: block;
   border: 1px solid silver;
   width: 100%;
+  /* object-fit: cover; */
+  /* object-position: 50% 50%; */
   }
   iframe:not([src]) {
     background-color: silver;
