--- a/src/component/media/audio/demo.html
+++ b/src/component/media/audio/demo.html
@@ -13,11 +13,11 @@
 </head>
 <body class="page">
   <div>
-    <div class="code" data-name="audio[controls]"></div>
+    <div class="code" data-name="audio[controls] source"></div>
     <div class="empty"></div>
     <audio controls autorun=false>
-      <source src="" type="audio/mpeg"   onload="return false">
-      <source src="" type="audio/ogg"   onload="return false">
+      <source src="../../../asset/sample/39-kb.mp3" type="audio/mpeg">
+      <source src="" type="audio/ogg">
       <p>Download:<br>
         <a href="file.mp3">MP3</a> or<br>
         <a href="file.ogg">OGG</a> audio.
@@ -31,7 +31,7 @@
     <div class="empty"></div>
     <figure>
       <figcaption>Listen to the T-Rex:</figcaption>
-      <audio controls src="" onload="return false">
+      <audio controls src="">
         <a href="file.mp3"> Download audio </a>
       </audio>
     </figure>
