--- a/src/component/media/object/demo.html
+++ b/src/component/media/object/demo.html
@@ -12,17 +12,11 @@
 </head>
 <body class="page">
   <div>
-    <div class="code" data-name="embed[type=video/webm]"></div>
-    <div class="empty"></div>
-    <embed type="video/webm" src="../../../asset/sample/flower.webm">
-    <div class="empty"></div>
-  </div>
-  <div>
-    <div class="code" data-name="figure embed[type=application/pdf]"></div>
+    <div class="code" data-name="figure object[type=application/pdf]"></div>
     <div class="empty"></div>
     <figure>
       <figcaption>PDF</figcaption>
-      <embed type="application/pdf" src="../../../asset/sample/In-CC0.pdf">
+      <object type="application/pdf" data="../../../asset/sample/In-CC0.pdf"></object>
     </figure>
     <div class="empty"></div>
   </div>
