--- a/src/component/media/audio/audio.css
+++ b/src/component/media/audio/audio.css
@@ -1,15 +1,19 @@
 /*Note: internal background cannot be change in chrome
     consider other control follow that color
 */
+
 audio {
+  --audio_width: 300px;
   --audio_height: 36px;
   display: block;
+  width: var(--audio_width);
   height: var(--audio_height);
   @supports(-webkit-appearance:none) {
-    /* color picker devtool */
     background-color: #f1f3f4;
     border: 1px solid #767676;
     border-radius: 2px;
-    font-family: monospace;
+    @supports(-moz-appearance:none) {
+      border: none;
+    }
   }
 }
