--- a/src/component/section/figure-figcaption/img/demo.html
+++ b/src/component/section/figure-figcaption/img/demo.html
@@ -11,18 +11,19 @@
   <script src="../../../utility/helper/dev.js" defer></script>
 </head>
 <body class="page">
+  
   <div>
-    <div class="code" data-name="embed[type=video/webm]"></div>
+    <div class="code" data-name="img[alt][title]"></div>
     <div class="empty"></div>
-    <embed type="video/webm" src="../../../asset/sample/flower.webm">
+    <img src="../../../asset/sample/96x96.png" width="96" height="96" alt="Image sample 96x96 px" title="Image sample&#10;size 96x96px">
     <div class="empty"></div>
   </div>
   <div>
-    <div class="code" data-name="figure embed[type=application/pdf]"></div>
+    <div class="code" data-name="figure figcaption + img"></div>
     <div class="empty"></div>
     <figure>
-      <figcaption>PDF</figcaption>
-      <embed type="application/pdf" src="../../../asset/sample/In-CC0.pdf">
+      <figcaption>The image:</figcaption>
+      <img src="../../../asset/sample/96x96.png" width="96" height="96" alt="Image sample 96x96 px" title="Image sample&#10;size 96x96px">
     </figure>
     <div class="empty"></div>
   </div>
